--- a/package.json
+++ b/package.json
@@ -6,12 +6,7 @@
         "build": "node bin/build.js"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.9",
-        "@tailwindcss/typography": "^0.5.15",
-        "esbuild": "^0.24.0",
-        "npm-run-all": "^4.1.5",
-        "prettier": "^3.3.3",
-        "prettier-plugin-tailwindcss": "^0.6.8",
-        "tailwindcss": "^3.4.18"
+        "esbuild": "^0.25.10",
+        "prettier": "^3.6.2"
     }
 }
