--- a/composer.json
+++ b/composer.json
@@ -25,21 +25,20 @@
         "spatie/laravel-package-tools": "^1.15.0"
     },
     "require-dev": {
-        "larastan/larastan": "^2.0.1",
+        "larastan/larastan": "^3.0",
         "laravel/pint": "^1.25",
         "nunomaduro/collision": "^8.8.2",
         "orchestra/testbench": "^9.0",
-        "pestphp/pest": "^3.0",
-        "pestphp/pest-plugin-arch": "^3.0",
-        "pestphp/pest-plugin-laravel": "^3.0",
-        "phpstan/extension-installer": "^1.3",
-        "phpstan/phpstan-deprecation-rules": "^1.1",
-        "phpstan/phpstan-phpunit": "^1.3"
+        "pestphp/pest": "^4.0",
+        "pestphp/pest-plugin-arch": "^4.0",
+        "pestphp/pest-plugin-laravel": "^4.0",
+        "phpstan/extension-installer": "^1.4",
+        "phpstan/phpstan-deprecation-rules": "^2.0",
+        "phpstan/phpstan-phpunit": "^2.0"
     },
     "autoload": {
         "psr-4": {
-            "Prvious\\Filament\\Combobox\\": "src/",
-            "Prvious\\Filament\\Combobox\\Database\\Factories\\": "database/factories/"
+            "Prvious\\Filament\\Combobox\\": "src/"
         }
     },
     "autoload-dev": {
