--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,16 +13,16 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, windows-latest]
-        php: [8.4, 8.3, 8.2]
+        php: [8.4, 8.3]
         laravel: [11.*, 12.*]
         stability: [prefer-lowest, prefer-stable]
         include:
           - laravel: 12.*
             testbench: ^10.0
             carbon: ^3.0
-            pestphp: ^3.0
-            pest-plugin-laravel: ^3.0
-            pest-type-coverage: ^3.0
+            pestphp: ^4.0
+            pest-plugin-laravel: ^4.0
+            pest-type-coverage: ^4.0
             larastan: ^3.0
             # rector: ^2.0
             phpstan-phpunit: ^2.0
