--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -22,20 +22,12 @@ jobs:
             pestphp: ^4.0
             pest-plugin-laravel: ^4.0
             pest-type-coverage: ^4.0
-            larastan: ^3.0
-            # rector: ^2.0
-            phpstan-phpunit: ^2.0
-            phpstan-deprecation: ^2.0
           - laravel: 11.*
             testbench: ^9.0
             carbon: ^2.63
             pestphp: ^3.0
             pest-plugin-laravel: ^3.0
             pest-type-coverage: ^3.0
-            larastan: ^3.0
-            # rector: ^2.0
-            phpstan-phpunit: ^2.0
-            phpstan-deprecation: ^2.0
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
@@ -69,7 +61,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "pestphp/pest:${{ matrix.pestphp }}" "pestphp/pest-plugin-arch:${{ matrix.pestphp }}" "pestphp/pest-plugin-laravel:${{ matrix.pest-plugin-laravel }}" "larastan/larastan:${{ matrix.larastan }}" "phpstan/phpstan-phpunit:${{ matrix.phpstan-phpunit }}" "phpstan/phpstan-deprecation-rules:${{ matrix.phpstan-deprecation }}" --no-interaction --no-update
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "nesbot/carbon:${{ matrix.carbon }}" --no-interaction --no-update
+
+          composer require "pestphp/pest:${{ matrix.pestphp }}" "pestphp/pest-plugin-arch:${{ matrix.pestphp }}" "pestphp/pest-plugin-laravel:${{ matrix.pest-plugin-laravel }}" --dev --no-interaction --no-update
 
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
