--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,30 +8,7 @@ on:
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-        php: [8.4, 8.3]
-        laravel: [11.*, 12.*]
-        stability: [prefer-lowest, prefer-stable]
-        include:
-          - laravel: 12.*
-            testbench: ^10.0
-            carbon: ^3.0
-            pestphp: ^4.0
-            pest-plugin-laravel: ^4.0
-            pest-type-coverage: ^4.0
-          - laravel: 11.*
-            testbench: ^9.0
-            carbon: ^2.63
-            pestphp: ^3.0
-            pest-plugin-laravel: ^3.0
-            pest-type-coverage: ^3.0
-
-    name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
-
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -39,7 +16,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php }}
+          php-version: 8.4
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, fileinfo
           coverage: xdebug
 
@@ -52,8 +29,8 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
-          key: dependencies-php-${{ matrix.php }}-os-${{ matrix.os }}-version-${{ matrix.stability }}-${{ matrix.laravel }}-composer-${{ hashFiles('composer.json') }}
-          restore-keys: dependencies-php-${{ matrix.php }}-os-${{ matrix.os }}-version-${{ matrix.stability }}-${{ matrix.laravel }}-composer-
+          key: dependencies-php-composer-${{ hashFiles('composer.json') }}
+          restore-keys: dependencies-php-composer-
 
       - name: Setup problem matchers
         run: |
@@ -61,12 +38,7 @@ jobs:
           echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
 
       - name: Install dependencies
-        run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "nesbot/carbon:${{ matrix.carbon }}" --no-interaction --no-update
-
-          composer require "pestphp/pest:${{ matrix.pestphp }}" "pestphp/pest-plugin-arch:${{ matrix.pestphp }}" "pestphp/pest-plugin-laravel:${{ matrix.pest-plugin-laravel }}" --dev --no-interaction --no-update
-
-          composer update --${{ matrix.stability }} --prefer-dist --no-interaction
+        run: composer install --no-ansi --no-interaction --optimize-autoloader --prefer-dist
 
       - name: List Installed Dependencies
         run: composer show -D
