--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,13 @@
     },
     "require-dev": {
         "filament/filament": "^4.0",
+        "laravel/boost": "^2",
         "laravel/pint": "^1.25",
         "nunomaduro/collision": "^8.8.2",
         "orchestra/testbench": "^9.0",
         "pestphp/pest": "^4.0",
         "pestphp/pest-plugin-arch": "^4.0",
+        "pestphp/pest-plugin-browser": "^4.3",
         "pestphp/pest-plugin-laravel": "^4.0"
     },
     "autoload": {
