--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "devDependencies": {
         "cssnano": "^6.0.1",
         "esbuild": "^0.25.10",
+        "playwright": "^1.58.2",
         "postcss": "^8.4.27",
         "postcss-cli": "^10.1.0",
         "postcss-nesting": "^13.0.0",
