Add Playwright install step to CI workflow
The browser tests require Playwright which needs Node.js and the
Chromium browser binary to be installed in the CI environment.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -43,5 +43,13 @@ jobs:
       - name: List Installed Dependencies
         run: composer show -D
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install Playwright
+        run: npm install playwright && npx playwright install chromium
+
       - name: Execute tests
         run: vendor/bin/pest --ci
