Add filament:assets step to CI workflow
Filament v5 requires its JS/CSS assets to be set up before they can be
served. Without this step the asset route returns 404 and all Alpine
components fail to initialize.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -56,5 +56,8 @@ jobs:
       - name: Install Playwright
         run: pnpm add playwright && pnpm exec playwright install chromium
 
+      - name: Set up Filament assets
+        run: php vendor/bin/testbench filament:assets
+
       - name: Execute tests
         run: vendor/bin/pest --ci
